Fixed linter issues